[package]
name = "rsvart"
version = "0.1.5"
edition = "2021"
authors = ["Michael Gargano <garganomx@gmail.com>","Daniel Danis <daniel.gordon.danis@protonmail.com>"]
repository = "https://github.com/iimpulse/rsvart"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rstest = "0.18.2"
cargo-tarpaulin = "0.27.3"
